[gd_scene load_steps=3 format=3 uid="uid://c5hido18wam2h"]

[ext_resource type="Script" path="res://GameOver.gd" id="1_4wakh"]

[sub_resource type="LabelSettings" id="LabelSettings_p6t0f"]
font_size = 27
font_color = Color(0, 0, 0, 1)

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4wakh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1248.0
offset_bottom = 712.0
color = Color(0.831373, 0.831373, 0.831373, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -56.5
offset_right = 130.006
offset_bottom = 56.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="GoMenu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Menu"

[node name="PlayAgain" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play Again"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 430.0
offset_top = 24.0
offset_right = 820.0
offset_bottom = 264.0
text = "Game Over

Time Made : 00:00:00
Personal Best: 00:00:00
Coins: 0"
label_settings = SubResource("LabelSettings_p6t0f")
uppercase = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/GoMenu" to="." method="_on_go_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
